--- a/style.css
+++ b/style.css
@@ -340,6 +340,17 @@ h2 {
     text-align: left;
 }
 
+#fetchOverlappingBtn {
+    background-color: #28a745; /* Green color for go */
+}
+#fetchOverlappingBtn:hover {
+    background-color: #218838;
+}
+
+#overlappingSessions {
+    border-top: 1px solid #eee;
+    padding-top: 20px;
+}
 /* MEDIA QUERIES */
 @media (max-width: 768px) {
     body {
